cf_analysis_results/checkerframework_3.42.0_results/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8.txt
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/minimizer/TraceEquivalenceMinimizer.java:24: error: (required.method.not.called) $$ 4 $$ method close $$ fout $$ java.io.FileWriter $$ possible exceptional exit due to fout.write(input2Dot) with exception type java.io.IOException $$ ( 612, 655 ) $$ @MustCall method close may not have been invoked on fout or any of its aliases.
			FileWriter fout = new FileWriter(tempFile);
			           ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to fout.write(input2Dot) with exception type java.io.IOException
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/evolution/sts/minimizer/BisimulationMinimizer.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(outputFile) $$ java.io.FileWriter $$ regular method exit $$ ( 1158, 1184 ) $$ @MustCall method close may not have been invoked on new FileWriter(outputFile) or any of its aliases.
			IOUtils.exportSTSToDot(resultSTS, new FileWriter(outputFile));
			                                  ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/ConfigUtils.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ inStream $$ java.io.InputStream $$ possible exceptional exit due to properties.load(inStream) with exception type java.io.IOException $$ ( 360, 434 ) $$ @MustCall method close may not have been invoked on inStream or any of its aliases.
		InputStream inStream = new FileInputStream(new File("config.properties"));
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to properties.load(inStream) with exception type java.io.IOException
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/test/IOUtilsTest.java:73: error: (required.method.not.called) $$ 4 $$ method close $$ new FileInputStream(outFile) $$ java.io.FileInputStream $$ possible exceptional exit due to stream.available() with exception type java.io.IOException $$ ( 2072, 2100 ) $$ @MustCall method close may not have been invoked on new FileInputStream(outFile) or any of its aliases.
			BufferedInputStream stream = new BufferedInputStream(new FileInputStream(outFile));
			                                                     ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to stream.available() with exception type java.io.IOException
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:146: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(file, false) $$ java.io.FileWriter $$ possible exceptional exit due to out.write(str) with exception type java.io.IOException $$ ( 4214, 4241 ) $$ @MustCall method close may not have been invoked on new FileWriter(file, false) or any of its aliases.
			BufferedWriter out = new BufferedWriter(new FileWriter(file, false));
			                                        ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.write(str) with exception type java.io.IOException
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:157: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(file) $$ java.io.FileWriter $$ regular method exit $$ ( 4486, 4506 ) $$ @MustCall method close may not have been invoked on new FileWriter(file) or any of its aliases.
			IOUtils.exportSTSToDot(sts, new FileWriter(file));
			                            ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url47ebb27197_asirbu_CorrectiveEvolution_tgz-pJ8-eu_fbk_soa_evolution_engine_impl_test_ProblemToSMVFuncTestJ8/src/eu/fbk/soa/util/IOUtils.java:198: error: (required.method.not.called) $$ 4 $$ method close $$ writer $$ java.io.FileWriter $$ regular method exit $$ ( 5595, 5624 ) $$ @MustCall method close may not have been invoked on writer or any of its aliases.
				writer = new FileWriter(file);
				       ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
7 errors
